// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get groupId from route params if not provided as property 1`] = `
<body>
  <div>
    <div>
      <div>
        <div
          class="MuiBox-root MuiBox-root-540"
        >
          <h5
            class="MuiTypography-root makeStyles-text-538 MuiTypography-h5 MuiTypography-gutterBottom"
          >
            <span>
              fake group name
            </span>
          </h5>
          <p
            class="MuiTypography-root makeStyles-text-538 makeStyles-description-539 MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-gutterBottom"
          >
            <span>
              fake group description
            </span>
          </p>
        </div>
      </div>
      <div>
        <div
          class="MuiPaper-root MuiPaper-outlined makeStyles-paperOutlined-571 MuiPaper-rounded"
        >
          <div
            class="MuiTabs-root"
          >
            <div
              class="MuiTabs-scroller MuiTabs-fixed"
              style="overflow: hidden;"
            >
              <div
                class="MuiTabs-flexContainer"
                role="tablist"
              >
                <button
                  aria-controls="group-tabpanel-members"
                  aria-selected="true"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit Mui-selected MuiTab-fullWidth"
                  id="group-tab-members"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    modals.group.manage.tabs.members.title
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
                <button
                  aria-controls="group-tabpanel-cars"
                  aria-selected="false"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit Mui-disabled MuiTab-fullWidth Mui-disabled"
                  disabled=""
                  id="group-tab-cars"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    modals.group.manage.tabs.cars.title
                  </span>
                </button>
              </div>
              <span
                class="PrivateTabIndicator-root-625 PrivateTabIndicator-colorSecondary-627 MuiTabs-indicator"
                style="left: 0px; width: 0px;"
              />
            </div>
          </div>
          <div
            class="makeStyles-tabContent-572"
            style="overflow-x: hidden;"
          >
            <div
              class="react-swipeable-view-container"
              style="flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform; transform: translate(0%, 0);"
            >
              <div
                aria-hidden="false"
                data-swipeable="true"
                style="width: 100%; flex-shrink: 0; overflow: auto;"
              >
                <div
                  aria-labelledby="group-tab-members"
                  id="group-tabpanel-members"
                  role="tabpanel"
                >
                  <ul
                    class="MuiList-root MuiList-padding"
                  >
                    <li
                      class="MuiListItem-root MuiListItem-gutters"
                    >
                      <div
                        class="MuiListItemText-root MuiListItemText-multiline"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1"
                        >
                          TEST
                        </p>
                        <span>
                          <div
                            class="MuiChip-root MuiChip-colorPrimary MuiChip-outlined MuiChip-outlinedPrimary MuiChip-sizeSmall WithStyles(ForwardRef(Chip))-sizeSmall-650"
                            style="margin-right: 4px;"
                          >
                            <span
                              class="MuiChip-label MuiChip-labelSmall"
                            >
                              misc.owner
                            </span>
                          </div>
                          <div
                            class="MuiChip-root MuiChip-colorSecondary MuiChip-outlined MuiChip-outlinedSecondary MuiChip-sizeSmall WithStyles(ForwardRef(Chip))-sizeSmall-650"
                          >
                            <span
                              class="MuiChip-label MuiChip-labelSmall"
                            >
                              misc.admin
                            </span>
                          </div>
                        </span>
                      </div>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`renders circular progress while loading group data 1`] = `
<body>
  <div>
    <div
      class="MuiBox-root MuiBox-root-64 makeStyles-centered-61 makeStyles-container-60"
    >
      <div
        class="MuiBox-root MuiBox-root-65 makeStyles-centered-61"
      >
        <div
          class="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
          role="progressbar"
          style="width: 40px; height: 40px;"
        >
          <svg
            class="MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
              cx="44"
              cy="44"
              fill="none"
              r="20.2"
              stroke-width="3.6"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`renders error message if group doesn't exist 1`] = `
<body>
  <div>
    <div
      class="MuiBox-root MuiBox-root-137 makeStyles-centered-120"
    >
      <div
        class="MuiBox-root MuiBox-root-138 makeStyles-centered-120"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-colorError MuiSvgIcon-fontSizeLarge"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <h6
          class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorTextSecondary"
        >
          modals.group.manage.loadingFailed
        </h6>
      </div>
    </div>
  </div>
</body>
`;

exports[`renders group info if group exists 1`] = `
<body>
  <div>
    <div>
      <div>
        <div
          class="MuiBox-root MuiBox-root-198"
        >
          <h5
            class="MuiTypography-root makeStyles-text-196 MuiTypography-h5 MuiTypography-gutterBottom"
          >
            <span>
              fake group name
            </span>
          </h5>
          <p
            class="MuiTypography-root makeStyles-text-196 makeStyles-description-197 MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-gutterBottom"
          >
            <span>
              fake group description
            </span>
          </p>
        </div>
      </div>
      <div>
        <div
          class="MuiPaper-root MuiPaper-outlined makeStyles-paperOutlined-229 MuiPaper-rounded"
        >
          <div
            class="MuiTabs-root"
          >
            <div
              class="MuiTabs-scroller MuiTabs-fixed"
              style="overflow: hidden;"
            >
              <div
                class="MuiTabs-flexContainer"
                role="tablist"
              >
                <button
                  aria-controls="group-tabpanel-members"
                  aria-selected="true"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit Mui-selected MuiTab-fullWidth"
                  id="group-tab-members"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    modals.group.manage.tabs.members.title
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
                <button
                  aria-controls="group-tabpanel-cars"
                  aria-selected="false"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit Mui-disabled MuiTab-fullWidth Mui-disabled"
                  disabled=""
                  id="group-tab-cars"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    modals.group.manage.tabs.cars.title
                  </span>
                </button>
              </div>
              <span
                class="PrivateTabIndicator-root-283 PrivateTabIndicator-colorSecondary-285 MuiTabs-indicator"
                style="left: 0px; width: 0px;"
              />
            </div>
          </div>
          <div
            class="makeStyles-tabContent-230"
            style="overflow-x: hidden;"
          >
            <div
              class="react-swipeable-view-container"
              style="flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform; transform: translate(0%, 0);"
            >
              <div
                aria-hidden="false"
                data-swipeable="true"
                style="width: 100%; flex-shrink: 0; overflow: auto;"
              >
                <div
                  aria-labelledby="group-tab-members"
                  id="group-tabpanel-members"
                  role="tabpanel"
                >
                  <ul
                    class="MuiList-root MuiList-padding"
                  >
                    <li
                      class="MuiListItem-root MuiListItem-gutters"
                    >
                      <div
                        class="MuiListItemText-root MuiListItemText-multiline"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1"
                        >
                          misc.you
                        </p>
                        <span>
                          <div
                            class="MuiChip-root MuiChip-colorPrimary MuiChip-outlined MuiChip-outlinedPrimary MuiChip-sizeSmall WithStyles(ForwardRef(Chip))-sizeSmall-308"
                            style="margin-right: 4px;"
                          >
                            <span
                              class="MuiChip-label MuiChip-labelSmall"
                            >
                              misc.owner
                            </span>
                          </div>
                          <div
                            class="MuiChip-root MuiChip-colorSecondary MuiChip-outlined MuiChip-outlinedSecondary MuiChip-sizeSmall WithStyles(ForwardRef(Chip))-sizeSmall-308"
                          >
                            <span
                              class="MuiChip-label MuiChip-labelSmall"
                            >
                              misc.admin
                            </span>
                          </div>
                        </span>
                      </div>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`renders list of members correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div>
          <div
            class="MuiBox-root MuiBox-root-369"
          >
            <h5
              class="MuiTypography-root makeStyles-text-367 MuiTypography-h5 MuiTypography-gutterBottom"
            >
              <span>
                fake group name
              </span>
            </h5>
            <p
              class="MuiTypography-root makeStyles-text-367 makeStyles-description-368 MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-gutterBottom"
            >
              <span>
                fake group description
              </span>
            </p>
          </div>
        </div>
        <div>
          <div
            class="MuiPaper-root MuiPaper-outlined makeStyles-paperOutlined-400 MuiPaper-rounded"
          >
            <div
              class="MuiTabs-root"
            >
              <div
                class="MuiTabs-scroller MuiTabs-fixed"
                style="overflow: hidden;"
              >
                <div
                  class="MuiTabs-flexContainer"
                  role="tablist"
                >
                  <button
                    aria-controls="group-tabpanel-members"
                    aria-selected="true"
                    class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit Mui-selected MuiTab-fullWidth"
                    id="group-tab-members"
                    role="tab"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiTab-wrapper"
                    >
                      modals.group.manage.tabs.members.title
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                  <button
                    aria-controls="group-tabpanel-cars"
                    aria-selected="false"
                    class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit Mui-disabled MuiTab-fullWidth Mui-disabled"
                    disabled=""
                    id="group-tab-cars"
                    role="tab"
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="MuiTab-wrapper"
                    >
                      modals.group.manage.tabs.cars.title
                    </span>
                  </button>
                </div>
                <span
                  class="PrivateTabIndicator-root-454 PrivateTabIndicator-colorSecondary-456 MuiTabs-indicator"
                  style="left: 0px; width: 0px;"
                />
              </div>
            </div>
            <div
              class="makeStyles-tabContent-401"
              style="overflow-x: hidden;"
            >
              <div
                class="react-swipeable-view-container"
                style="flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform; transform: translate(0%, 0);"
              >
                <div
                  aria-hidden="false"
                  data-swipeable="true"
                  style="width: 100%; flex-shrink: 0; overflow: auto;"
                >
                  <div
                    aria-labelledby="group-tab-members"
                    id="group-tabpanel-members"
                    role="tabpanel"
                  >
                    <ul
                      class="MuiList-root MuiList-padding"
                    >
                      <li
                        class="MuiListItem-root MuiListItem-gutters MuiListItem-divider"
                      >
                        <div
                          class="MuiListItemText-root MuiListItemText-multiline"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1"
                          >
                            misc.you
                          </p>
                          <span>
                            <div
                              class="MuiChip-root MuiChip-colorPrimary MuiChip-outlined MuiChip-outlinedPrimary MuiChip-sizeSmall WithStyles(ForwardRef(Chip))-sizeSmall-479"
                              style="margin-right: 4px;"
                            >
                              <span
                                class="MuiChip-label MuiChip-labelSmall"
                              >
                                misc.owner
                              </span>
                            </div>
                            <div
                              class="MuiChip-root MuiChip-colorSecondary MuiChip-outlined MuiChip-outlinedSecondary MuiChip-sizeSmall WithStyles(ForwardRef(Chip))-sizeSmall-479"
                            >
                              <span
                                class="MuiChip-label MuiChip-labelSmall"
                              >
                                misc.admin
                              </span>
                            </div>
                          </span>
                        </div>
                      </li>
                      <li
                        class="MuiListItem-root MuiListItem-gutters MuiListItem-divider"
                      >
                        <div
                          class="MuiListItemText-root MuiListItemText-multiline"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1"
                          >
                            ADMIN
                          </p>
                          <span>
                            <div
                              class="MuiChip-root MuiChip-colorSecondary MuiChip-outlined MuiChip-outlinedSecondary MuiChip-sizeSmall WithStyles(ForwardRef(Chip))-sizeSmall-479"
                            >
                              <span
                                class="MuiChip-label MuiChip-labelSmall"
                              >
                                misc.admin
                              </span>
                            </div>
                          </span>
                        </div>
                      </li>
                      <li
                        class="MuiListItem-root MuiListItem-gutters MuiListItem-divider"
                      >
                        <div
                          class="MuiListItemText-root MuiListItemText-multiline"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1"
                          >
                            MEMBER
                          </p>
                          <span />
                        </div>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div>
        <div
          class="MuiBox-root MuiBox-root-369"
        >
          <h5
            class="MuiTypography-root makeStyles-text-367 MuiTypography-h5 MuiTypography-gutterBottom"
          >
            <span>
              fake group name
            </span>
          </h5>
          <p
            class="MuiTypography-root makeStyles-text-367 makeStyles-description-368 MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-gutterBottom"
          >
            <span>
              fake group description
            </span>
          </p>
        </div>
      </div>
      <div>
        <div
          class="MuiPaper-root MuiPaper-outlined makeStyles-paperOutlined-400 MuiPaper-rounded"
        >
          <div
            class="MuiTabs-root"
          >
            <div
              class="MuiTabs-scroller MuiTabs-fixed"
              style="overflow: hidden;"
            >
              <div
                class="MuiTabs-flexContainer"
                role="tablist"
              >
                <button
                  aria-controls="group-tabpanel-members"
                  aria-selected="true"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit Mui-selected MuiTab-fullWidth"
                  id="group-tab-members"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    modals.group.manage.tabs.members.title
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
                <button
                  aria-controls="group-tabpanel-cars"
                  aria-selected="false"
                  class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit Mui-disabled MuiTab-fullWidth Mui-disabled"
                  disabled=""
                  id="group-tab-cars"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="MuiTab-wrapper"
                  >
                    modals.group.manage.tabs.cars.title
                  </span>
                </button>
              </div>
              <span
                class="PrivateTabIndicator-root-454 PrivateTabIndicator-colorSecondary-456 MuiTabs-indicator"
                style="left: 0px; width: 0px;"
              />
            </div>
          </div>
          <div
            class="makeStyles-tabContent-401"
            style="overflow-x: hidden;"
          >
            <div
              class="react-swipeable-view-container"
              style="flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform; transform: translate(0%, 0);"
            >
              <div
                aria-hidden="false"
                data-swipeable="true"
                style="width: 100%; flex-shrink: 0; overflow: auto;"
              >
                <div
                  aria-labelledby="group-tab-members"
                  id="group-tabpanel-members"
                  role="tabpanel"
                >
                  <ul
                    class="MuiList-root MuiList-padding"
                  >
                    <li
                      class="MuiListItem-root MuiListItem-gutters MuiListItem-divider"
                    >
                      <div
                        class="MuiListItemText-root MuiListItemText-multiline"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1"
                        >
                          misc.you
                        </p>
                        <span>
                          <div
                            class="MuiChip-root MuiChip-colorPrimary MuiChip-outlined MuiChip-outlinedPrimary MuiChip-sizeSmall WithStyles(ForwardRef(Chip))-sizeSmall-479"
                            style="margin-right: 4px;"
                          >
                            <span
                              class="MuiChip-label MuiChip-labelSmall"
                            >
                              misc.owner
                            </span>
                          </div>
                          <div
                            class="MuiChip-root MuiChip-colorSecondary MuiChip-outlined MuiChip-outlinedSecondary MuiChip-sizeSmall WithStyles(ForwardRef(Chip))-sizeSmall-479"
                          >
                            <span
                              class="MuiChip-label MuiChip-labelSmall"
                            >
                              misc.admin
                            </span>
                          </div>
                        </span>
                      </div>
                    </li>
                    <li
                      class="MuiListItem-root MuiListItem-gutters MuiListItem-divider"
                    >
                      <div
                        class="MuiListItemText-root MuiListItemText-multiline"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1"
                        >
                          ADMIN
                        </p>
                        <span>
                          <div
                            class="MuiChip-root MuiChip-colorSecondary MuiChip-outlined MuiChip-outlinedSecondary MuiChip-sizeSmall WithStyles(ForwardRef(Chip))-sizeSmall-479"
                          >
                            <span
                              class="MuiChip-label MuiChip-labelSmall"
                            >
                              misc.admin
                            </span>
                          </div>
                        </span>
                      </div>
                    </li>
                    <li
                      class="MuiListItem-root MuiListItem-gutters MuiListItem-divider"
                    >
                      <div
                        class="MuiListItemText-root MuiListItemText-multiline"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1"
                        >
                          MEMBER
                        </p>
                        <span />
                      </div>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
